<?xml version="1.0" encoding="utf-8"?>
<com.google.android.apps.iosched.ui.widget.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="32dp"
    android:background="@android:color/white" >

    <Button
        android:id="@+id/search_dictionary"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_home_dictionary"
        android:text="@string/dictionary_search" />

    <Button
        android:id="@+id/search_kanji"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_home_kanji"
        android:text="@string/kanji_search" />

    <Button
        android:id="@+id/radical_search"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_home_radical"
        android:text="@string/radical_search" />

    <Button
        android:id="@+id/settings"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_home_settings"
        android:text="@string/settings" />

    <Button
        android:id="@+id/about"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_home_about"
        android:text="@string/about" />

    <Button style="@style/DashboardButton" />

</com.google.android.apps.iosched.ui.widget.DashboardLayout>