<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/languages" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_english"
            android:key="language_en"
            android:title="English" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_german"
            android:key="language_de"
            android:title="German" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_french"
            android:key="language_fr"
            android:title="French" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_russian"
            android:key="language_ru"
            android:title="Russian" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_spanish"
            android:key="language_es"
            android:title="Spanish" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_portugese"
            android:key="language_pt"
            android:title="Portugese" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/romaji" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="romaji_search"
            android:summary="Allows you using rōmaji when searching Japanese expressions"
            android:title="Rōmaji Search" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/search" >
        <Preference
            android:key="clear_search_history"
            android:summary="Remove all the searches you have performed"
            android:title="Clear search history" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Troubleshooting" >
        <Preference
            android:key="index_files_version_reset"
            android:title="Initialize dictionary data files" />
    </PreferenceCategory>

</PreferenceScreen>