<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <net.makimono.dictionary.view.TextView
            android:id="@+id/kanji_literal"
            style="@style/EntryMainExpression"
            android:textSize="56dp" />

        <net.makimono.dictionary.view.KanjiWritingAnimationView
            android:id="@+id/kanji_animation"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignBottom="@id/kanji_literal"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="18dp" />

        <!-- Readings -->

        <TextView
            android:id="@+id/kanji_readings_separator_text"
            style="@style/SeparatorText"
            android:layout_below="@id/kanji_literal"
            android:text="@string/readings" />

        <View
            android:id="@+id/kanji_readings_separator_line"
            style="@style/SeparatorLine"
            android:layout_below="@id/kanji_readings_separator_text" />

        <TableLayout
            android:id="@+id/kanji_readings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kanji_readings_separator_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:shrinkColumns="1" >

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="On-Yomi"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_on_yomi"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="Kun-Yomi"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_kun_yomi"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="Nanori"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_nanori"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="Hangul"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_hangul"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="Pinyin"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_pinyin"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>
        </TableLayout>

        <!-- Meanings -->

        <TextView
            android:id="@+id/kanji_meanings_separator_text"
            style="@style/SeparatorText"
            android:layout_below="@id/kanji_readings"
            android:text="@string/meanings" />

        <View
            android:id="@+id/kanji_meanings_separator_line"
            style="@style/SeparatorLine"
            android:layout_below="@id/kanji_meanings_separator_text" />

        <LinearLayout
            android:id="@+id/kanji_meanings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kanji_meanings_separator_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" />

        <!-- Miscellaneous -->

        <TextView
            android:id="@+id/kanji_misc_separator_text"
            style="@style/SeparatorText"
            android:layout_below="@id/kanji_meanings"
            android:text="@string/miscellaneous" />

        <View
            android:id="@+id/kanji_misc_separator_line"
            style="@style/SeparatorLine"
            android:layout_below="@id/kanji_misc_separator_text" />

        <TableLayout
            android:id="@+id/kanji_misc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kanji_misc_separator_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="10dp"
            android:stretchColumns="1" >

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="@string/radical"
                    android:textSize="@dimen/label_text_size" />

                <net.makimono.dictionary.view.TextView
                    android:id="@+id/kanji_radical"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="@string/stroke_count"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_stroke_count"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="JLPT"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_jlpt"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="@string/grade"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_grade"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="@string/frequency"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_frequency"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>

            <TableRow android:gravity="center_vertical" >

                <TextView
                    android:text="@string/unicode"
                    android:textSize="@dimen/label_text_size" />

                <TextView
                    android:id="@+id/kanji_unicode"
                    android:layout_margin="3dp"
                    android:paddingLeft="15dp"
                    android:textSize="@dimen/content_text_size" />
            </TableRow>
        </TableLayout>
        
        <!-- Alternative radicals -->

        <TextView
            android:id="@+id/alternative_radicals_separator_text"
            style="@style/SeparatorText"
            android:layout_below="@id/kanji_misc"
            android:text="Alternative radicals" />

        <View
            android:id="@+id/alternative_radicals_separator_line"
            style="@style/SeparatorLine"
            android:layout_below="@id/alternative_radicals_separator_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alternative_radicals_separator_line"
            android:padding="10dp"
            android:text="@string/acknowledgement_edrdg"
            android:textSize="12sp" />
    </RelativeLayout>

</ScrollView>